--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec  5 02:52:29 1999  Tim Janik  <timj@gtk.org>
+
+	* bsecapture.[hc]: adapted stuff to the new BsePcmDevice and BseHeart
+	core objects.
+
 Tue Nov 23 00:16:57 1999  Tim Janik  <timj@gtk.org>
 
 	* bsefirfilter.[hc]: some (minor) parameter clean ups.
