--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 16 08:08:35 1999  Tim Janik  <timj@gtk.org>
+
+	* bsefirfilter.c (bse_fir_filter_class_init): group cut off parameters.
+
+	* bsegenosc.[hc]: removed amplitude modulation input channel.
+
 Sun Dec 12 04:55:13 1999  Tim Janik  <timj@gtk.org>
 
 	* bsegenosc.c: radio parameter fixups.
