--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 16 10:15:15 1999  Tim Janik  <timj@gtk.org>
+
+	* bsegenosc.c (bse_gen_osc_class_init): group frequency parameters.
+
 Thu Dec 16 08:08:35 1999  Tim Janik  <timj@gtk.org>
 
 	* bsefirfilter.c (bse_fir_filter_class_init): group cut off parameters.
