--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -220,7 +220,7 @@ Sat Nov 20 12:27:21 1999  Tim Janik  <timj@gtk.org>
 	ln(2^(1/12)).
 
 	* bsesource.c (bse_source_do_reset): 
-	* bsesource.c (bse_source_init): defualt initialize ->index with 0 not
+	* bsesource.c (bse_source_init): default initialize ->index with 0 not
 	-1, so we are always greater than ->start.
 
 Sun Nov 14 19:44:51 1999  Tim Janik  <timj@gtk.org>
@@ -287,7 +287,8 @@ Mon Nov  8 02:01:31 1999  Tim Janik  <timj@gtk.org>
 
 	* bseobject.h (BSE_NOTIFY): don't notify objects that are destroyed.
 	* bseobject.c (bse_object_do_shutdown): notify object of ::destroy,
-	allthough it is of course destroyed.
+	allthough it is of course destroyed (prevent the BSE_NOTIFY()
+	sanity check for destroyed objects in this case).
 
 	* bsesnet.[hc]: make the sole input channel we have a multi track
 	channel (well, actually only stereo for the moment).
@@ -363,14 +364,14 @@ Wed Nov  3 21:50:38 1999  Tim Janik  <timj@gtk.org>
 	* bseplugin.c (bse_plugin_get_export_spec): fixed a bad bad bug here,
 	we were walking the export specs by sizeof(BseExportSpec) instead of
 	the appropriate sizeof(BseExportObject) or sizeof(BseExportProcedure),
-	depending on what type of specs we actually handle. this lead to only
+	depending on what type of specs we actually handle. this led to only
 	the first type being recognized (which was moderatedly mild, could
 	have insanely crashed instead ;).
 
 Wed Nov  3 20:05:14 1999  Tim Janik  <timj@gtk.org>
 
 	* bsecategories.c (bse_categories_register_icon): category icons stay
-	alive throught a programs life time.
+	alive throughout a program's life time.
 
 	* bseobject.c (bse_object_get_icon): removed icon cruft from object
 	class and simply provided bse_object_get_icon(). there might be a
@@ -490,7 +491,7 @@ Thu Sep 30 09:18:58 1999  Tim Janik  <timj@gtk.org>
 	(bse_object_set_param): check for non-destroyed object first.
 
 	* bsecontainer.[hc] (bse_container_add_item_unrefed): new function for
-	containers to manage (non-destroyed) items, without holding and extra
+	containers to manage (non-destroyed) items, without holding an extra
 	ref count on them, we use destroy notification from BseItem for cleanup.
 
 	* bseitem.c (bse_item_do_shutdown): remove item from container in
@@ -509,7 +510,7 @@ Wed Sep 22 06:24:00 1999  Tim Janik  <timj@gtk.org>
 	* bsetype.[hc]: lots of code cleanups and bug fixes over the last few
 	days. significantly changed allocation system, so TypeNodes are not
 	themselves relocatable anymore (certain structure parts are though).
-	nodes get allocated with their supers list in one peace now.
+	nodes get allocated with their supers list in one piece now.
 
 Thu Sep 16 09:14:19 1999  Tim Janik  <timj@gtk.org>
 
@@ -541,6 +542,7 @@ Mon May 17 02:52:49 1999  Tim Janik  <timj@gtk.org>
 	BSE is version 0.2.0 now.
 
 Sat May 15 23:23:05 1999  Tim Janik  <timj@gtk.org>
+
 	* bsesongmixer.c (bse_mixer_activate_voice): don't set notes on inactive
 	voices.
 
